sass/partials/_bar-chart.scss
// bar chart

.axis text {
  font: 1em $font-main;
  stroke: white;
}

#cat-form {
  .card {
    overflow: auto;
    background-color: $primary-light;
    padding: 0.2em 0;
    width: 100%;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0.2rem;
  }

  .active {
    background-color: $primary-lighter;
  }
}

.axis path ,
.axis line {
  fill: none;
  stroke: white;
  shape-rendering: crispEdges;
}

.x.axis.bar-axis path {
  display: none;
}

.dot, .bar {
  fill: steelblue;
}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
}

